# clauthing

./: .README.md.swp  .gitignore  CLAUDE.md  README.md  architecture.md  cl-skills.md  claude-code-quirks.md  clauthing-titles  coding.md  done-worktrees.md  features-plan.md  gotchas.md  hacking.md  important.md  kc-skills.md  logging.md  plugins.md  pyproject.toml  release  rules.md  run-tests  settings.md  state.md  todos.md  ui.md  wrapping.md
clauthing/: claude.py  claude_skills_mcp_server.py  colon_command.py  command_mcp_server.py  events.py  hooks.py  instances.py  logging.py  logs.py  main.py  permissions_gui.py  plan_mcp_server.py  proxy_mcp_server.py  rules.py  session.py  session_utils.py  skills_mcp_server.py  tmux.py  tmux_status.py  window_utils.py
clauthing/colon_commands/: mcp_commands.py  nav_commands.py  permission_commands.py  time.py  (+1 more)
functional_tests/: harness.py  test_auth_propagation.py  test_cd_command.py  test_cd_e2e.py  test_claude_config.py  test_picker.py  test_resume.py  test_tab_switching.py
kitty_claude/: claude.py  claude_skills_mcp_server.py  claude_utils.py  colon_command.py  command_mcp_server.py  events.py  hooks.py  instances.py  logging.py  logs.py  main.py  permissions_gui.py  plan_mcp_server.py  proxy_mcp_server.py  rules.py  session.py  session_utils.py  skills_mcp_server.py  tmux.py  tmux_status.py  window_utils.py
live_tests/: fake_claude.py  test_cd_live.py
plans/: future-plugins.md  titles.md
tests/: harness.py  test_cd_command.py  test_picker.py  test_proxy_mcp.py  test_session_utils.py  test_skills_mcp.py
(+6 files in other folders)
