[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitty-claude"
version = "0.1.0"
description = "Wrapper to launch Claude Code in a dedicated kitty terminal with tmux"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
kitty-claude = "kitty_claude.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/kitty-claude"

[tool.setuptools.packages.find]
exclude = ["worktrees*"]