[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "clauthing"
version = "1.1.1"
description = "Wrapper to launch Claude Code in a dedicated kitty terminal with tmux"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [ "mcp", "pytest", "pexpect",]
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: POSIX :: Linux",]
[[project.authors]]
name = "Your Name"
email = "your.email@example.com"

[project.scripts]
clauthing = "clauthing.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/clauthing"

[tool.setuptools.packages.find]
exclude = [ "worktrees*",]
